err/django-multilingual-ng.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_multilingual_ng-0.1.21.egg-info'...
Listing './lib/python3.5/site-packages/multilingual'...
Listing './lib/python3.5/site-packages/multilingual/flatpages'...
Listing './lib/python3.5/site-packages/multilingual/flatpages/templates'...
Listing './lib/python3.5/site-packages/multilingual/flatpages/templates/flatpages'...
Listing './lib/python3.5/site-packages/multilingual/management'...
Listing './lib/python3.5/site-packages/multilingual/management/commands'...
Compiling './lib/python3.5/site-packages/multilingual/management/commands/mlng_convert.py'...
***   File "./lib/python3.5/site-packages/multilingual/management/commands/mlng_convert.py", line 23
    print self.style.HTTP_SUCCESS('Done.')
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/multilingual/media'...
Listing './lib/python3.5/site-packages/multilingual/media/multilingual'...
Listing './lib/python3.5/site-packages/multilingual/media/multilingual/admin'...
Listing './lib/python3.5/site-packages/multilingual/media/multilingual/admin/css'...
Compiling './lib/python3.5/site-packages/multilingual/query.py'...
***   File "./lib/python3.5/site-packages/multilingual/query.py", line 116
    except MultiJoin, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/multilingual/templates'...
Listing './lib/python3.5/site-packages/multilingual/templates/admin'...
Listing './lib/python3.5/site-packages/multilingual/templates/admin/multilingual'...
Listing './lib/python3.5/site-packages/multilingual/templates/admin/multilingual/edit_inline'...
Listing './lib/python3.5/site-packages/multilingual/templatetags'...
Compiling './lib/python3.5/site-packages/multilingual/templatetags/multilingual_tags.py'...
***   File "./lib/python3.5/site-packages/multilingual/templatetags/multilingual_tags.py", line 64
    raise template.TemplateSyntaxError, \
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multilingual/translation.py'...
***   File "./lib/python3.5/site-packages/multilingual/translation.py", line 349
    raise ValueError, ("%s.Translation must be a subclass "
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/bootstrap.py'...
***   File "./lib/python3.5/site-packages/tests/bootstrap.py", line 65
    exec urllib2.urlopen('http://python-distribute.org/distribute_setup.py'
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/testproject'...
Listing './lib/python3.5/site-packages/tests/testproject/tests'...
Listing './share'...
Listing './share/python-wheels'...
